2008-06-04  Shai Ayal  <shaiay@users.sourceforge.net>

	* graphics.cc (axes::properties::calc_ticks_and_lims): Make sure
	that lo <= hi.

	* graphics.h.in (axes::pixel2coord, axes::coord2pixel): New functions.

	* graphics.cc (convert_position): No longer static.
	* graphics.h.in: Provide decl.

 	* graphics.cc (Favailable_backends): New function.
  	* graphics.h.in (base_graphics_backend::available_backends_list):
	New function.

	* graphics.cc (axes::properties::calc_ticks_and_lims): Refactor.
	Adjust axes limits & tics together so that the result is consistent.
	(axes::properties::calc_tick_sep): Ditto.
	(axes::properties::get_axis_limits): Ditto.  Now a member of
	axes::properties
	(magform): Now file-scope static function instead of
	axes::properties member function.

	* graphics.h.in (axes::properties::update_xlim): call the new
	axes::properties::calc_ticks_and_lims method
	(axes::properties::update_ylim): ditto
	(axes::properties::update_zlim): ditto

2008-06-04  Michael Goffioul <michael.goffioul@gmail.com>

	* genprops.awk (emit_source): Use all properties in factory defaults.

	* graphics.h.in (base_property::base_property): Set internal counter
	to 1 by default.
	(property::property): Adapt constructors to default counter value in
	base_property.

	* graphics.h.in (base_properties::get_property): Make virtual and
	remove const modifier.
	* graphics.cc (base_properties::get_property): Can return built-in
	properties. Generate an error if the property does not exist.
	(base_properties::add_listener): Use get_property.
	(Fadd_listener): Add documentation.
	* genprops.awk (emit_common_declarations, emit_source): Emit code for
	overloaded get_property method.

	* genprops.awk (emit_declarations): Run listeners in the property
	setter methods.
	* graphics.h.in (enum listener_mode): New enum type for listeners.
	(base_property::set): Make non-virtual and handle listeners execution.
	(base_property::listeners): New field holding a map of listeners.