@@ -1,5 +1,9 @@
 2008-06-04  Shai Ayal  <shaiay@users.sourceforge.net>
 
+	* graphics.h.in (axes::properities::fix_limits) : New method.
+	(axes::properties::update_xlim, axes::properties::update_ylim,
+	axes::properties::update_zlim): Use fix_limits.
+
 	* graphics.cc (axes::properties::calc_ticks_and_lims): Make sure
 	that lo <= hi.
 
